Modified preview shows as well as modified some CSS on all components. Fixed the date readability for each show and added the seasons data to the preview show cards.

--- a/DWA18 Capstone_Project/src/App.css
+++ b/DWA18 Capstone_Project/src/App.css
@@ -1,4 +1,4 @@
 .main-container {
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr;
+    grid-template-columns: auto auto auto auto;
 }
