--- a/DWA18 Capstone_Project/src/index.css
+++ b/DWA18 Capstone_Project/src/index.css
@@ -3,5 +3,5 @@
 }
 
 html {
-    background-color: lightgray;
+    background-color: rgba(0, 0, 0, 0.6);
 }
